# TestCoverage

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  QtAuthenticationProgram.pro  README.md  coverage.sh  functions.cpp  functions.h  inputwindow.cpp  inputwindow.h  main.cpp  mylineedit.cpp  startwindow.cpp  startwindow.h  workwithfiles.cpp  workwithfiles.h
cmake/modules/: CodeCoverage.cmake  GoogleTest.cmake
data/: temp.txt
include/: functions.h  mylineedit.h
resources/: taras.txt
src/: functions.cpp  inputwindow.cpp  main.cpp  mylineedit.cpp  startwindow.cpp  tests.cpp  workwithfiles.cpp
tests/: test1.cpp  test2.cpp
